--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/css/main-style.css"/>
     <script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
     <script>
-      var ws = new WebSocket('ws://sorcelator.koding.io:1234', 'echo-protocol');
+      var ws = new WebSocket('192.168.1.4:1234', 'echo-protocol');
       function htmlEntities(str) {
           return String(str).replace(/&/g, '&amp;').replace(/</g, '&lt;').replace(/>/g, '&gt;').replace(/"/g, '&quot;');
           }
